--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.2",
     "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.2.8",
@@ -15,10 +16,12 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.24.1",
+    "cache-loader": "^1.2.0",
     "css-loader": "^0.28.4",
     "del": "^2.2.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
+    "fork-ts-checker-webpack-plugin": "^0.3.0",
     "html-webpack-plugin": "^2.24.1",
     "image-webpack-loader": "^3.0.0",
     "immutability-helper": "^2.1.1",
@@ -32,6 +35,7 @@
     "qiniu": "^6.1.13",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redis": "^2.8.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
