--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.2",
     "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.2.8",
