--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "autodll-webpack-plugin": "^0.3.8",
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
